chat message store and msg box alignment fix

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -163,24 +163,26 @@
   border-bottom: 1.5px solid rgba(138, 138, 138, 0.2);
 }
 .msg{
-    width: 300px;
+    width: 383px;
     margin-left: 30px;
-    margin-top: 30px;
+    margin-top: 10px;
     border-radius: 10px;
-    background-color: rgb(208, 223, 202);
+    background-color: #d9fdd3;
     padding: 10px;
-
+    position: relative;
+    word-wrap: break-word;
+    padding-bottom: 19px
 }
 .msg1{
     float: right;
-    width: 300px;
+    width: 400px;
   
     margin-top: 30px;
     border-radius: 10px;
     background-color: rgb(208, 223, 202);
     margin-right: 20px;
     padding: 10px;
-
+    word-wrap: break-word;
 }
 
 
@@ -190,7 +192,7 @@
     right: 0;
     margin-top: 60px;
     width: 100%;
-    height: 550px;
+    height: 522px;
     overflow-y: scroll;
 
 }
@@ -260,6 +262,7 @@ padding-top: 10px;
   margin-left: 10px;
   margin-top: 5px;
   box-shadow: 1px 1px 0.5px grey;
+  object-fit: contain;
 }
 .dp1{
     color: #DFE5E7;
@@ -395,7 +398,7 @@ cursor: pointer;
     padding: 20px;
   }
 .send{
-  color: gray;
+  color: rgb(6, 138, 78);
   transform: rotate(45deg);
   width: 20px;
   height: 20px;
@@ -437,6 +440,66 @@ cursor: pointer;
   right: 0;
  }
 } */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
